[tool.poetry]
name = "sat_trace"
version = "0.1.0"
description = ""
authors = ["Max Perraudin"]

[tool.poetry.dependencies]
python = "^3.8"
matplotlib = "^3.3.4"
numpy = "^1.20.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.4"
pytest = "^6.2.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
