[tool.poetry]
name = "sat_trace"
version = "0.1.0"
description = ""
authors = ["Max Perraudin"]

[tool.poetry.dependencies]
python = "^3.8"
matplotlib = "^3.3.4"
numpy = "^1.20.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.4"
pytest = "^6.2.2"
pytest-cov = "^2.12.1"
pre-commit = "^2.13.0"
mypy = "^0.910"
isort = "^5.9.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 79

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.mypy]
follow_imports = "silent"
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = false
check_untyped_defs = true
no_implicit_reexport = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.mypy-tests]
ignore_errors = true
